# perspectiva-dados

./: .gitignore  README.md  README2.md  Uv.ipynb  main.py  pyproject.toml
20260316_Aula_Zero/: 20260316_revisao1.ipynb  20260409_revisao2.ipynb
20260409_Comandos_git/: 20260409_comandos_git.ipynb
20260410_webscraping/: 20260410_scrap.ipynb  20260410_webscrap.ipynb  20260412_webscraping_ibge.ipynb  20260412_webscraping_seu_dinheiro.ipynb  Untitled.ipynb
20260414_pln/: 20260414_PLN.ipynb  noticias_ibge_corrigido.csv
