[project]
name = "perspectiva-dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "notebook>=7.5.5",
    "pandas>=2.3.3",
    "path>=17.1.1",
    "polars>=1.39.3",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
    "unicode>=2.9",
    "unidecode>=1.4.0",
]
